根据对象id操作相关接口
