# controllers/mongoD.go
@@ -61,3 +61,21 @@ func (ctx *MongoDController) MultiDeleteData() {
 
 	ctx.ApiSuccessData("删除成功", result)
 }
+
+// @Title 根据_id删除一份文档
+// @Description 根据对象精确查找删除一份文档，{"ret": 200, "msg": "", "data": {"code": 0, "msg": "删除成功", "data": {"DeletedCount": 1}}}
+// @Param	mongoKey		query 	string	true		"mongoKey"
+// @Param   collection		query	string  true		"集合名"
+// @Param   objectId		query	string   true		"对象ID"
+// @Success 0 {string} 清空成功
+// @Failure 1 {string} 清空失败错误信息
+// @router /DeleteDataById [get]
+func (ctx *MongoDController) DeleteDataById() {
+	objectId := ctx.GetString("objectId")
+	mp := ctx.ApiMongoProxy()
+	result, err := mp.DeleteDataById(objectId)
+	if err != nil {
+		ctx.ApiFailData(1, "删除失败"+fmt.Sprintf("%s", err), result)
+	}
+	ctx.ApiSuccessData("删除成功", result)
+}
